--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,11 +1,10 @@
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>eCommerce</title>
 
-<link
-  rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-  crossorigin="anonymous"
-/>
-<link rel="stylesheet" type="text/css" href="css/styles.css" />
-
+<!-- CSS (load bootstrap from a CDN) -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<!-- <script defer src="/socket.io/socket.io.js"></script> -->
+<script src="/socket.io/socket.io.js"></script>
+<!-- agregamos defer, para que se ejecute luego de cargar la paigna/dom -->
+<script defer src="/public/js/main.js"></script>
