--- a/views/pages/form.ejs
+++ b/views/pages/form.ejs
@@ -9,7 +9,7 @@
       
       <section class="form-group">
         <form id="form-product" action="/nuevoitem" method="POST">
-          <label>Nombre</label>
+          <label>Titulo del producto</label>
           <input id="form-title" class="form-control" type="text" name="title" />
           <label>Precio</label>
           <input id="form-price" class="form-control" type="text" name="price" />
@@ -18,6 +18,8 @@
           <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
       </section>
+      <table id="table-form"></table>
+      
       <div id="products"></div>
     </main>
     <footer><%- include('../partials/footer'); %></footer>
