--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -5,6 +5,7 @@
 <!-- CSS (load bootstrap from a CDN) -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <!-- <script defer src="/socket.io/socket.io.js"></script> -->
-<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
 <!-- agregamos defer, para que se ejecute luego de cargar la paigna/dom -->
-<script defer src="/public/js/main.js"></script>
+<script defer src="/js/main.js"></script>
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
